examples/test/testpolicy7464.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7464
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key4: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value8
          key39: value33
          key12: value44
      podSelector:
        matchLabels:
          key28: value33
